@@ -4,10 +4,8 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.*;
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
 import cliente.ws.sc.DtSesionUsuario;
@@ -16,37 +14,33 @@ import cliente.ws.sc.WebServicesService;
 import cliente.ws.sc.DtUsuarioListaConsulta;
 import cliente.ws.sc.DtUsuarioListaConsultaArray;
 import cliente.ws.sc.RolUsuario;
-import cliente.ws.sc.DtRegistroArray;
+import cliente.ws.sc.DtEdicion;
 import cliente.ws.sc.DtEdicionArray;
-
-import jakarta.xml.ws.Binding;
-import jakarta.xml.ws.BindingProvider;
-import jakarta.xml.ws.soap.SOAPBinding;
 
 @WebServlet("/ConsultaUsuario")
 public class ConsultaUsuarioSvt extends HttpServlet {
   private static final long serialVersionUID = 1L;
 
-
   @Override
   protected void doGet(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
-	  
-	// Flag de rol para el JSP 
-		  boolean esVis = false;
-		    HttpSession sessionCampana = req.getSession(false);
-		    DtSesionUsuario sesUserCampana = null;
-		    if (sessionCampana != null) {
-		      Object o = sessionCampana.getAttribute("usuario_logueado");
-		      if (o instanceof DtSesionUsuario u) {
-		        sesUserCampana = u;
-		        if (u.getRol() == RolUsuario.VISITANTE) {
-		          esVis = true;
-		        }
-		      }
-		    }
-		    req.setAttribute("ES_VIS", esVis);
 
+    // Flag de visitante
+    boolean esVis = false;
+    HttpSession sessionCampana = req.getSession(false);
+    DtSesionUsuario sesUserCampana = null;
+    if (sessionCampana != null) {
+      Object o = sessionCampana.getAttribute("usuario_logueado");
+      if (o instanceof DtSesionUsuario u) {
+        sesUserCampana = u;
+        if (u.getRol() == RolUsuario.VISITANTE) {
+          esVis = true;
+        }
+      }
+    }
+    req.setAttribute("ES_VIS", esVis);
+
+    // Nick a consultar
     String nickParam = req.getParameter("nick");
     if (nickParam == null || nickParam.isBlank()) {
       resp.sendError(HttpServletResponse.SC_BAD_REQUEST, "Falta parametro 'nick'.");
@@ -55,10 +49,11 @@ public class ConsultaUsuarioSvt extends HttpServlet {
     final String nick = nickParam.trim();
 
     try {
-        WebServicesService service = new WebServicesService();
+      WebServicesService service = new WebServicesService();
       WebServices port = service.getWebServicesPort();
 
-      String rol = "v"; 
+      // ---- Determinar rol del usuario consultado ----
+      String rol = "v";
       boolean esAsistente = false;
       boolean esOrganizador = false;
 
@@ -88,6 +83,7 @@ public class ConsultaUsuarioSvt extends HttpServlet {
         return;
       }
 
+      // ---- Datos del usuario ----
       DtUsuarioListaConsulta usuario = port.consultaDeUsuario(nick);
       if (usuario == null) {
         resp.sendError(HttpServletResponse.SC_NOT_FOUND, "Usuario no encontrado.");
@@ -95,132 +91,77 @@ public class ConsultaUsuarioSvt extends HttpServlet {
       }
 
       HttpSession session = req.getSession(false);
-      DtSesionUsuario sesUser = (session != null) ? (DtSesionUsuario) session.getAttribute("usuario_logueado") : null;
+      DtSesionUsuario sesUser = (session != null)
+          ? (DtSesionUsuario) session.getAttribute("usuario_logueado")
+          : null;
       boolean esSuPerfil = (sesUser != null) && nick.equalsIgnoreCase(sesUser.getNickname());
 
+      // Imagen
       try {
         String img = usuario.getImg();
-        if (img != null && !img.isBlank()) req.setAttribute("IMAGEN", img);
+        if (img != null && !img.isBlank()) {
+          req.setAttribute("IMAGEN", img);
+        }
       } catch (Exception ignore) {}
 
-      Map<String,String> eventoPorEdicion = new HashMap<>();
+      // ---- Ediciones según rol ----
 
-      if ("A".equals(rol) && esSuPerfil) {
-        try {
-          DtRegistroArray ra = port.listarRegistrosDeAsistente(nick);
-          List<cliente.ws.sc.DtRegistro> lista =
-              (ra != null && ra.getItem() != null) ? ra.getItem() : java.util.List.of();
-          req.setAttribute("Registros", lista);
-
-          for (cliente.ws.sc.DtRegistro r : lista) {
-            if (r == null || r.getEdicion() == null) continue;
-
-            Object e = r.getEdicion();
-            String ed = safe(getNombreEdicion(e));
-            if (!ed.isBlank() && !eventoPorEdicion.containsKey(ed)) {
-              String ev = obtenerNombreEventoDesdeEdicion(e);
-              eventoPorEdicion.put(ed, ev);
-            }
-          }
-        } catch (Exception ignore) {}
-      }
-
+      // Organizador: ediciones que organiza
       if ("O".equals(rol)) {
         try {
           DtEdicionArray ea = port.listarEdicionesDeOrganizador(nick);
-          List<cliente.ws.sc.DtEdicion> lista =
-              (ea != null && ea.getItem() != null) ? ea.getItem() : java.util.List.of();
+          List<DtEdicion> lista = (ea != null && ea.getItem() != null)
+              ? ea.getItem()
+              : java.util.Collections.emptyList();
           req.setAttribute("Ediciones", lista);
-
-          for (cliente.ws.sc.DtEdicion e : lista) {
-            if (e == null) continue;
-            String ed = safe(e.getNombre());
-            if (!ed.isBlank() && !eventoPorEdicion.containsKey(ed)) {
-              String ev = obtenerNombreEventoDesdeEdicion(e);
-              eventoPorEdicion.put(ed, ev);
-            }
-          }
-        } catch (Exception ignore) {}
+        } catch (Exception ignore) {
+          req.setAttribute("Ediciones", java.util.Collections.emptyList());
+        }
       }
 
-      req.setAttribute("EDICION_EVENTO", eventoPorEdicion);
-      req.setAttribute("esSuPerfil", esSuPerfil);
-      req.setAttribute("rol",   rol);
-      req.setAttribute("usuario", usuario);
-
-      req.getRequestDispatcher("/WEB-INF/views/ConsultaUsuario.jsp").forward(req, resp);
-      
-      Set<String> seguidosSet = null;
-      if (!esVis && sesUserCampana != null && sesUserCampana.getNickname() != null && !sesUserCampana.getNickname().isBlank()) {
+      // Asistente (solo su propio perfil): ediciones donde está registrado
+      if ("A".equals(rol) && esSuPerfil) {
         try {
-          DtUsuarioListaConsulta yo = port.consultaDeUsuario(sesUserCampana.getNickname());
+          DtEdicionArray arr = port.listarEdicionesConRegistroUsuario(nick);
+          List<DtEdicion> lista = (arr != null && arr.getItem() != null)
+              ? arr.getItem()
+              : java.util.Collections.emptyList();
+          req.setAttribute("listaEdicion", lista);
+        } catch (Exception ignore) {
+          req.setAttribute("listaEdicion", java.util.Collections.emptyList());
+        }
+      }
+
+      // ---- SEGUIDOS_SET para el botón seguir/dejar ----
+      Set<String> seguidosSet = null;
+      if (!esVis
+          && sesUserCampana != null
+          && sesUserCampana.getNickname() != null
+          && !sesUserCampana.getNickname().isBlank()) {
+        try {
+          DtUsuarioListaConsulta yo =
+              port.consultaDeUsuario(sesUserCampana.getNickname());
           List<String> seguidos = (yo != null) ? yo.getSeguidos() : null;
           if (seguidos != null) seguidosSet = new HashSet<>(seguidos);
-        } catch (Exception ignore) {
-          // fallback en JSP usando getSeguidores() del usuario tarjeta
-        }
+        } catch (Exception ignore) {}
       }
       req.setAttribute("SEGUIDOS_SET", seguidosSet);
 
+      // ---- Atributos finales y forward ----
+      req.setAttribute("esSuPerfil", esSuPerfil);
+      req.setAttribute("rol", rol);
+      req.setAttribute("usuario", usuario);
+
+      req.getRequestDispatcher("/WEB-INF/views/ConsultaUsuario.jsp")
+         .forward(req, resp);
+
     } catch (Exception e) {
+      req.setAttribute("SEGUIDOS_SET", null);
       resp.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR,
           "Error consultando usuario: " + safe(e.getMessage()));
-      req.setAttribute("SEGUIDOS_SET", null);
     }
   }
 
-  private static String getNombreEdicion(Object e) {
-    if (e == null) return "";
-    try {
-      if (e instanceof cliente.ws.sc.DtEdicion de) {
-        String s = de.getNombre();
-        return (s == null) ? "" : s;
-      }
-    } catch (Throwable ignore) {}
-
-    try {
-      Object v = e.getClass().getMethod("getNombre").invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    try {
-      Object v = e.getClass().getMethod("getName").invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    try {
-      Object v = e.getClass().getMethod("getTitulo").invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    return "";
-  }
-
-  private static String obtenerNombreEventoDesdeEdicion(Object e) {
-    if (e == null) return "Evento no disponible";
-    try {
-      var m = e.getClass().getMethod("getEventoNombre");
-      Object v = m.invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    try {
-      var m = e.getClass().getMethod("getNombreEvento");
-      Object v = m.invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    try {
-      var m = e.getClass().getMethod("getEventoSigla");
-      Object v = m.invoke(e);
-      if (v instanceof String s && !s.isBlank()) return s;
-    } catch (Throwable ignore) {}
-
-    return "Evento no disponible";
-  }
-
-  private static String safe(String s) { return (s == null) ? "" : s; }
-  
   @Override
   protected void doPost(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
@@ -230,22 +171,23 @@ public class ConsultaUsuarioSvt extends HttpServlet {
 
     String returnUrl = req.getContextPath() + "/ConsultaUsuario";
     if (objetivoNick != null && !objetivoNick.isBlank()) {
-      returnUrl += "?nick=" + java.net.URLEncoder.encode(objetivoNick, java.nio.charset.StandardCharsets.UTF_8);
+      returnUrl += "?nick=" + java.net.URLEncoder.encode(
+          objetivoNick, java.nio.charset.StandardCharsets.UTF_8);
     }
 
-    jakarta.servlet.http.HttpSession sesCampana = req.getSession(false);
+    HttpSession sesCampana = req.getSession(false);
     if (sesCampana == null) {
       resp.sendRedirect(returnUrl);
       return;
     }
 
     Object o = sesCampana.getAttribute("usuario_logueado");
-    if (!(o instanceof cliente.ws.sc.DtSesionUsuario u)) {
+    if (!(o instanceof DtSesionUsuario u)) {
       resp.sendRedirect(returnUrl);
       return;
     }
 
-    String principal = u.getNickname(); 
+    String principal = u.getNickname();
     if (principal == null || principal.isBlank()
         || objetivoNick == null || objetivoNick.isBlank()
         || principal.equals(objetivoNick)) {
@@ -254,17 +196,21 @@ public class ConsultaUsuarioSvt extends HttpServlet {
     }
 
     try {
-      cliente.ws.sc.WebServicesService service = new cliente.ws.sc.WebServicesService();
-      cliente.ws.sc.WebServices port = service.getWebServicesPort();
+      WebServicesService service = new WebServicesService();
+      WebServices port = service.getWebServicesPort();
 
       if ("seguir".equalsIgnoreCase(accion)) {
         port.seguirPersona(principal, objetivoNick);
       } else if ("dejar".equalsIgnoreCase(accion)) {
         port.sacarSeguirPersona(principal, objetivoNick);
       }
-    } catch (Exception ignore) {
-    }
+    } catch (Exception ignore) {}
 
     resp.sendRedirect(returnUrl);
   }
+
+  private static String safe(String s) {
+    return (s == null) ? "" : s.trim();
+  }
 }
+
